[package]
name = "gotcha"
version = "0.1.0"
description = "aim to be the fastest web framework"
authors = ["Kilerd Chan <blove694@gmail.com>"]
edition = "2018"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
http = "0.2.1"
hyper = "0.13.4"
tokio = { version = "0.2.18", features = ['full'] }
tower-service = "0.3.0"
futures-util = "0.3.4"
futures = "0.3.4"
route-recognizer = "0.1.13"
