[package]
name = "conservator"
description = "conservator is the orm based on sqlx"
version = "0.1.7"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "bigdecimal"] }
conservator_macro = { version = "0.1", path = "../conservator_macro" }
