[package]
name = "conservator_macro"
description = "conservator macro"
version = "0.1.3"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.13.0"
itertools = "0.10.3"
proc-macro2 = "1.0.33"
quote = "1.0.10"
regex = "1.5.4"
strum = { version = "0.23", features = ["derive"] }
syn = "1.0.82"
proc-macro-error = { version = "1", default-features = false }

[dev-dependencies]
trybuild = "1.0"
