[package]
name = "gotcha_core"
description = "gotcha web framework core lib"
version = "0.1.9"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oas = '0.1'
http = "0.2"
convert_case = "0.6.0"
regex = "1.7.1"
serde_json = "1"
axum = "0.7"
either = "1.13.0"
