[package]
name = "gotcha_macro"
description = "gotcha web framework macro"
version = "0.1.11"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.47"
darling = "0.14.2"
gotcha_core = { version = "0.1", path = "../gotcha_core" }
proc-macro-error = { version = "1", default-features = false }
