[package]
name = "magic_orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "bigdecimal"] }
magic_orm_macro = {path="../magic_orm_macro"}