[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
gotcha = {version="0.2", path = "../../gotcha", features = ["cloudflare_worker"]}
serde = {version="1", features=["derive"]}
tokio = {version = "1", features = ["macros", 'rt']}
worker = {version = "0.5.0", features = ["http"]}