[package]
name = "configuration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
gotcha = {path = "../../gotcha"}
serde = {version="1", features=["derive"]}
tokio = {version = "1", features = ["macros", 'rt-multi-thread']}
