[package]
name = "extension"
version = "0.1.0"
edition = "2021"

[dependencies]
gotcha = { path = "../../gotcha", features = ["openapi"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
axum = "0.7"