[package]
name = "path_param_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "path_param_test"
path = "main.rs"

[dependencies]
gotcha = { path = "../../gotcha", features = ["openapi"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }