[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[dependencies]
gotcha = { path = "../../gotcha", features = ["openapi", "cors"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"