[package]
name = "testing-guide"
version = "0.1.0"
edition = "2021"

[dependencies]
gotcha = { path = "../../gotcha", features = ["openapi"] }
gotcha_macro = { path = "../../gotcha_macro" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
axum-test = "16"
tower = "0.5"
http = "1"
assert-json-diff = "2"
uuid = { version = "1", features = ["serde", "v4"] }